# QuickDinner-WebAssembly

./: AdminPage.qml  BookingPage.qml  CMakeLists.txt  DashboardPage.qml  HistoryPage.qml  LandingPage.qml  LoginSignPage.qml  Main.qml  appQuickDinner.js  index.html  main.cpp  quickdinner.qrc  reservationmanager.cpp  reservationmanager.h
